--- a/programming/setup.org
+++ b/programming/setup.org
@@ -74,6 +74,13 @@ curl -fLo ~/.local/share/nvim/site/autoload/plug.vim --create-dirs \
     https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
 #+END_SRC
 Then open nvim and run =:PlugInstall:=
+*** Emacs
+#+BEGIN_SRC bash
+cd ~
+git clone https://github.com/schoettkr/Terra.git .emacs.d
+yay -S emacs
+#+END_SRC
+
 
 
 ** Homefolder structure
