Add entry for calibre/ebook management which I dont really use tho

--- a/programming/setup.org
+++ b/programming/setup.org
@@ -122,6 +122,117 @@ To take screenshots =scrot= is a nice minimal utility. Install it and use it as 
 #+BEGIN_SRC 
 yay evince-light
 #+END_SRC
+*** Ebook Management
+Update: Actually I don't like calibre and it does not seem to be worth it for me. Just put your pdfs/mobis/azws in library/books. Convert pdf documents with =k2pdfopt= and html files with https://ebook.online-convert.com/convert-to-mobi. That's it not much hassle. To put files onto your ebook reader just mount it and cp as you'd do for any other device - this is the method of least hassle.
+
+Make sure to have the homefolder structure in place. Books are supposed to go into =~/library/books/Calibre=. Install =calibre= and set it up in accordance to this guide https://www.reddit.com/r/kindle/comments/3b7dzl/tutorial_how_to_use_calibre_to_manage_book/
+Copy of the guide (as of 20.11.2018):
+**** Le Guide
+Setting up Calibre using Welcome Wizard:
+
+Create a new empty folder using your library's desired name
+
+Launch Calibre and choose that folder.
+
+Next, Choose your device. If you choose Kindle, go to step 4. If you choose other e-readers, go to step 6. If you don't want to set up Send-to-Kindle, go to step 6.
+
+Go to Amazon's Manage Your Content and Devices, choose Settings, find Personal Document Settings. Take note of the Send-to-Kindle E-Mail (ending with @Kindle,com). Find Add a new approved e-mail address and type in your GMX email.
+
+In the Next dialog on Calibre welcome wizard, type in your Kindle email. Press Use GMX and type in your GMX credentials.
+
+Next, and you are done.
+
+.
+
+Setting up your Calibre:
+
+Select Preferences
+
+Choose Behavior, set Preferred output format to AZW3 (if you're using Kindle) or EPUB (if you're using other devices). The reason is that AZW3 and EPUB can make use of Calibre's Edit Book function. Apply.
+
+Choose Add your own columns, press the "+" button. Setup the following:
+
+Pages (For Count Pages plugin, to get page number on your books):
+
+Lookup name: pages
+
+Column heading: Pages
+
+Column type: Integers.
+
+Format for numbers: {0,}
+
+Shelf (To manage your reading progress):
+
+Lookup name: shelf
+
+Column heading: Shelf
+
+Column type: Text, column shown in the tag browser.
+
+Choose Common Options, Look & Feel, set Embed font famlly to your preferred font. I choose Bookerly here. Note: I have no problem using Bookerly on the Kindle 7th Gen, but for the older generations, there might be some issues. The font will be in the Publisher's Font option on the Kindle.
+
+Choose Saving books to disk, Copy and paste the following to the Save template: 1. Books/{author_sort}/{title}/{title} - {authors}
+
+Choose Sending books to devices, Copy and paste the following to the Save template: 1. Books/{author_sort}/{title}/{title} - {authors}
+
+Choose Metadata plugboards, Add new plugboard
+
+Format: any format
+
+Device: any device
+
+Source template: {series:|| - }{series_index:0>5.2f|[|] - }{title}
+
+This will save your books like this: Harry Potter - [01.00] - Harry Potter and the Sorcerer's Stone if your book is in a series, or Oliver Twist if your book isn't.
+
+You can look here for more options
+
+Destination field: title
+
+Choose Plugins, find Kindle 2/3/4/Touch/PaperWhite/Voyage Device Interface, set:
+
+Save templates: 1. Books/{author_sort}/{title}/{title} - {authors}
+
+Custom column name to retrieve page counts from: #pages
+
+Disable Overwrite existing apnx on device
+
+Close, and restart Calibre
+
+.
+
+Adding plug-ins to power-up your Calibre:
+
+Select Preferences, choose Plugins
+
+Choose Get new plugins
+
+Find and install Goodreads and Count Pages
+
+Find Count Pages plugin, double click, under Page count options, choose Custom column: #pages. Leave the others blank.
+
+Notes: This only gives you a rough estimation of the books. If you want a more accurate version, use Amazon books, or use the built-in Download page counts from Goodreads
+
+Apply.
+
+Go to Metadata download, and choose Goodreads
+
+Apply, and Restart Calibre.
+
+.
+
+Using Calibre to manage books:
+
+Add books: You can Drag-and-drop the ebook files to Calibre, or use the Add books function.
+
+Edit metadata: You can type in your books' metadata manually, or download the data using Download metadata buttons. Calibre will automatically search book's data and you can choose the matching title.
+
+Convert books: When sending to Kindle, Calibre'll automatically convert your books to Kindle readable formats, but it won't store the file locally. You can convert individually, or bulk convert to save the metadata directly to your books
+
+If you connect Kindle to Calibre, Calibre will automatically find books on your Kindle. To send books to your Kindle, press Send to device.
+
+Fetch news: You can choose your favorite news source from the menu, Press Schedule for download, choose days to download, and Save. Calibre will automatically download News IF IT IS RUNNING and send to your Kindle if you already set up Send-to-Kindle account.
 *** Calculator
 Install =speedcrunch=
 
