Didnt actually need that folder yet

--- a/programming/setup.org
+++ b/programming/setup.org
@@ -257,6 +257,7 @@ Create the following folder structure in the home directory:
 ~/library/books
 
 ~/library/docs
+;;~/library/docs/misc
 
 ~/library/music
 
