--- a/programming/setup.org
+++ b/programming/setup.org
@@ -355,6 +355,14 @@ In =/etc/makepkg.conf= change ~MAKEFLAGS="-jX"~ where =X= is the number of cores
 
 *** Sort/update pacman mirrors
 *** Maintenance
+#+BEGIN_SRC sh
+sudo rm -rf /var/cache/pacman/pkg/*
+sudo rm -rf var/cache/man/*
+ncdu -x / # Use as root to see where space is taken.
+pacman -Qdt # to see orphan packages
+systemctl --failed # check for failed systemd services
+#+END_SRC
+To monitor processes, cpu, memory etc install =glances=.
 *** Primer on zshell files
 Since =.zshenv= is always sourced, it often contains exported variables that should be available to other programs. For example, $PATH, $EDITOR, and $PAGER are often set in .zshenv. Also, you can set $ZDOTDIR in .zshenv to specify an alternative location for the rest of your zsh configuration.
 
